--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack",
     "watch": "webpack --watch"
   },
-  "mode":"development",
+  "mode": "development",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Pratik-Karale/todo-app.git"
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/Pratik-Karale/todo-app#readme",
   "devDependencies": {
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
   }
